--- a/static/index.html
+++ b/static/index.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
-<html lang="ko"
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>감염병 백신 의약품 검색</title>
+    <title>통합 의료 정보 검색</title>
 </head>
 <body>
-    <form id="searchForm">
-        <input type="text" id="PRDLST_SN" placeholder="품목기준코드 입력" required>
-        <button tyle="submit">검색</button>
-    </form>
-    <div id="results"></div>
-
-    <script>
-        document.getElementById('searchForm').onsubmit = async function(event) {
-            event.preventDefault();
-            const PRDLST_SN = document.getElementById('PRDLST_SN').value;
-            const response = await fetch('/vaccine/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    ServiceKey: '여기에_서비스키를_입력하세요',
-                    PRDLST_SN: PRDLST_SN,
-                    type: 'json'
-                })
-            });
-            const result = await response.json();
-            document.getElementById('results').innerText = JSON.stringify(result, null, 2);
-        }
-    </script>
+    <h1>통합 의료 정보 검색</h1>
+    <button onclick="window.open('/static/drug/drug.html')">통합 의약 정보 검색</button><br><br>
+    <button onclick="window.open('/static/drugstore/drugstore.html')">통합 약국 정보 검색</button><br><br>
+    <button onclick="window.open('/static/disease/disease.html')">통합 질병 정보 검색</button><br><br>
+    <button onclick="window.open('/static/hospital/hospital.html')">통합 병원 정보 검색</button><br><br>
 </body>
-</html>
+</html> 
