--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <h1>통합 의료 정보 검색</h1>
-    <button onclick="window.open('/static/drug/drug.html')">통합 의약 정보 검색</button><br><br>
-    <button onclick="window.open('/static/drugstore/drugstore.html')">통합 약국 정보 검색</button><br><br>
-    <button onclick="window.open('/static/disease/disease.html')">통합 질병 정보 검색</button><br><br>
-    <button onclick="window.open('/static/hospital/hospital.html')">통합 병원 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/drug/drug.html')">통합 의약 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/drugstore/drugstore.html')">통합 약국 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/disease/disease.html')">통합 질병 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/hospital/hospital.html')">통합 병원 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/emergency/emergency.html')">통합 응급 의료 시설 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('/static/aed/aed.html')">자동 심장 충격기 조회</button><br><br>
 </body>
 </html> 
