--- a/static/disease/disease.html
+++ b/static/disease/disease.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>통합 의료 정보 검색</h1>
-    <button onclick="window.open('diseaseinfo.html')">질병 예측 정보 검색</button>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('diseaseinfo.html')">질병 예측 정보 검색</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('vaccination.html')">질병 예측 정보 검색</button>
 </body>
 </html> 
