--- a/static/drugstore/drugstore.html
+++ b/static/drugstore/drugstore.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>통합 약국 정보 검색</h1>
-    <button onclick="window.open('pharmacyinfo.html')">전국 약국 정보 검색</button>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('pharmacyinfo.html')">우리 동네 약국 찾기</button>
 </body>
 </html> 
