--- a/static/drugstore/pharmacyinfo.html
+++ b/static/drugstore/pharmacyinfo.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>약국 정보 조회</title>
+    <title>우리 동네 약국 찾기</title>
     <style>
         .details {
             display: none;
@@ -10,7 +10,9 @@
     </style>
 </head>
 <body>
-    <h1>약국 정보 조회</h1>
+    <h1>우리 동네 약국 찾기</h1>
+    <p><b>해당 검색 탭에 "시/도 + 시/군/구"을 검색하면 기관명, 주소, 필독사항, 대표전화, 진료시간, 기관ID가 출력됩니다.</b><div class="ex"></div>
+        검색 예시: 서울특별시 노원구</p>
     <form id="PharmacyInfo">
         <input type="text" id="Q0" name="Q0" placeholder="시도를 입력하세요">
         <input type="text" id="Q1" name="Q1" placeholder="시군구를 입력하세요">
@@ -38,9 +40,9 @@
                 const detailsId = `details-${item.institution_id}`;
                 resultHtml += `
                     <div style="margin-bottom: 20px;">
+                        <p><strong>기관명:</strong> ${item.institution_name}</p>
                         <p><strong>주소:</strong> ${item.address}</p>
                         <p><strong>필독사항:</strong> ${item.remarks}</p>
-                        <p><strong>기관명:</strong> ${item.institution_name}</p>
                         <p><strong>대표전화1:</strong> ${item.phone_number}</p>
                         <button type="button" onclick="toggleDetails('${detailsId}', '${item.hours_1}', '${item.hours_2}', '${item.hours_3}', '${item.hours_4}', '${item.hours_5}', '${item.hours_6}', '${item.hours_7}', '${item.hours_8}', '${item.hours_9}', '${item.hours_10}', '${item.hours_11}', '${item.hours_12}', '${item.hours_13}', '${item.hours_14}', '${item.hours_15}', '${item.hours_16}')">진료시간</button>
                         <div id="${detailsId}" class="details"></div>
