--- a/static/hospital/medicalcode.html
+++ b/static/hospital/medicalcode.html
@@ -2,30 +2,30 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>질병 예측 정보 조회</title>
+    <title>진료 과목별 병원 정보 조회</title>
 </head>
 <body>
-    <h1>질병 예측 정보 조회</h1>
-    <p><b>해당 검색 탭에 "지역 코드"를 검색하면 질병코드, 예측일자, 지역코드, 질병 예측진료건수, 질병 예측위험도, 질병 위험도지침이 출력됩니다.</b><div class="ex"></div>
-     검색 예시: 11</p>
-    <button type="button" id="allcodesBtn">전체 지역 코드</button>
-    <form id="RCode">
-        <input type="text" id="znCd" name="znCd" placeholder="지역 코드를 입력하세요.">
-        <button type="button" onclick="fetchDiseaseInfo()">정보 조회</button>
+    <h1>진료 과목별 병원 정보 조회</h1>
+    <p><b>해당 검색 탭에 "진료 과목 코드"를 검색하면 병원명, 종별코드명, 주소, 전화번호, 사이트 주소, 설립일이 출력됩니다.</b><div class="ex"></div>
+        검색 예시: 49(치과)/01(내과)</p>
+    <button type="button" id="allcodesBtn">전체 진료 과목 코드</button>
+    <form id="MedicalCode">
+        <input type="text" id="dgsbjtCd" name="dgsbjtCd" placeholder="진료 과목 코드를 입력하세요.">
+        <button type="button" onclick="fetchMedicalCode()">병원 조회</button>
     </form>
     <div id="results"></div>
     <div id="allcodesResult"></div> <!-- 고유 ID로 수정 -->
 
     <script>
-        async function fetchDiseaseInfo() {
-            const znCd = document.getElementById('znCd').value;
-            const response = await fetch('/diseaseinfo', {  // 엔드포인트 경로 수정
+        async function fetchMedicalCode() {
+            const dgsbjtCd = document.getElementById('dgsbjtCd').value;
+            const response = await fetch('/getMedicalCode', {  // 엔드포인트 경로 수정
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    znCd: znCd,
+                    dgsbjtCd: dgsbjtCd,
                 })
             });
             
@@ -35,17 +35,18 @@
                 data.forEach(item => {
                     resultHtml += `
                         <div style="margin-bottom: 20px;">
-                            <p><strong>질병코드:</strong> ${item.dissCd}</p>
-                            <p><strong>예측일자:</strong> ${item.dt}</p>
-                            <p><strong>질병 예측진료건수:</strong> ${item.cnt}</p>
-                            <p><strong>질병 예측위험도:</strong> ${item.risk}</p>
-                            <p><strong>질병 위험도 지침:</strong> ${item.dissRiskXpln}</p>
+                            <p><strong>병원명:</strong> ${item.yadmNm}</p>
+                            <p><strong>종별코드명:</strong> ${item.clCdNm}</p>
+                            <p><strong>주소:</strong> ${item.addr}</p>
+                            <p><strong>전화번호:</strong> ${item.telno}</p>
+                            <p><strong>사이트 주소:</strong> ${item.hospUrl}</p>
+                            <p><strong>설립일:</strong> ${item.estbDd}</p>
                             <hr>
                         </div>
                     `;
                 });
             } else {
-                resultHtml = '<p>질병 정보를 찾을 수 없습니다.</p>';
+                resultHtml = '<p>병원 정보를 찾을 수 없습니다.</p>';
             }
             document.getElementById('results').innerHTML = resultHtml;  // 결과 HTML을 페이지에 삽입
         }
@@ -53,7 +54,7 @@
         document.getElementById('allcodesBtn').addEventListener('click', function() {
             const allcodesResultDiv = document.getElementById('allcodesResult');
             allcodesResultDiv.innerHTML = `
-            <p>11: 서울</p>
+            <p>01: 내과</p>
             <p>02: 신경과</p>
             <p>03: 정신건강의학과</p>
             <p>04: 외과</p>
