--- a/static/hospital/medicalcode.html
+++ b/static/hospital/medicalcode.html
@@ -14,7 +14,7 @@
         <button type="button" onclick="fetchMedicalCode()">병원 조회</button>
     </form>
     <div id="results"></div>
-    <div id="allcodesResult"></div> <!-- 고유 ID로 수정 -->
+    <div id="allcodesResult"></div>
 
     <script>
         async function fetchMedicalCode() {
