--- a/static/disease/diseaseinfo.html
+++ b/static/disease/diseaseinfo.html
@@ -6,35 +6,35 @@
 </head>
 <body>
     <h1>질병 예측 정보 조회</h1>
-    <p><b>해당 검색 탭에 "지역 코드"를 검색하면 질병코드, 예측일자, 지역코드, 질병 예측진료건수, 질병 예측위험도, 질병 위험도지침이 출력됩니다.</b><div class="ex"></div>
-     검색 예시: 11</p>
-    <button type="button" id="allcodesBtn">전체 지역 코드</button>
-    <form id="RCode">
-        <input type="text" id="znCd" name="znCd" placeholder="지역 코드를 입력하세요.">
+    <p><b>해당 검색 탭에 "질병 코드"를 입력하면 시/도별 예측 일자, 질병예측진료건수, 질병예측위험도, 질병위험도 지침이 출력됩니다.</b></p>
+    <p><b>[질병코드] 1: 감기, 2: 눈병, 3: 식중독, 4: 천식, 5: 피부염, 15: 심뇌혈관 질환</b></p>
+    <p>[질병위험도 등급코드] 1: 관심, 2: 주의, 3: 경고, 4: 위험</p>
+    <form id="Disease">
+        <input type="text" id="dissCd" name="dissCd" placeholder="질병코드를 입력하세요.">
         <button type="button" onclick="fetchDiseaseInfo()">정보 조회</button>
     </form>
     <div id="results"></div>
-    <div id="allcodesResult"></div> <!-- 고유 ID로 수정 -->
 
     <script>
         async function fetchDiseaseInfo() {
-            const znCd = document.getElementById('znCd').value;
+            const dissCd = document.getElementById('dissCd').value;
             const response = await fetch('/diseaseinfo', {  // 엔드포인트 경로 수정
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    znCd: znCd,
+                    dissCd: dissCd,
                 })
             });
             
             const data = await response.json();
             let resultHtml = '';
-            if (data.length > 0) {  // 병원 정보가 있을 때만 처리
+            if (data.length > 0) {
                 data.forEach(item => {
                     resultHtml += `
                         <div style="margin-bottom: 20px;">
+                            <p><strong>지역코드:</strong> ${item.znCd}</p>
                             <p><strong>질병코드:</strong> ${item.dissCd}</p>
                             <p><strong>예측일자:</strong> ${item.dt}</p>
                             <p><strong>질병 예측진료건수:</strong> ${item.cnt}</p>
@@ -49,69 +49,6 @@
             }
             document.getElementById('results').innerHTML = resultHtml;  // 결과 HTML을 페이지에 삽입
         }
-
-        document.getElementById('allcodesBtn').addEventListener('click', function() {
-            const allcodesResultDiv = document.getElementById('allcodesResult');
-            allcodesResultDiv.innerHTML = `
-            <p>11: 서울</p>
-            <p>02: 신경과</p>
-            <p>03: 정신건강의학과</p>
-            <p>04: 외과</p>
-            <p>05: 정형외과</p>
-            <p>06: 신경외과</p>
-            <p>07: 심장혈관흉부외과</p>
-            <p>08: 성형외과</p>
-            <p>09: 마취통증의학과</p>
-            <p>10: 산부인과</p>
-            <p>11: 소아청소년과</p>
-            <p>12: 안과</p>
-            <p>13: 이비인후과</p>
-            <p>14: 피부과</p>
-            <p>15: 비뇨의학과</p>
-            <p>16: 영상의학과</p>
-            <p>17: 방사선종양학과</p>
-            <p>18: 병리과</p>
-            <p>19: 진단검사의학과</p>
-            <p>20: 결핵과</p>
-            <p>21: 재활의학과</p>
-            <p>22: 핵의학과</p>
-            <p>23: 가정의학과</p>
-            <p>24: 응급의학과</p>
-            <p>25: 직업환경의학과</p>
-            <p>26: 예방의학과</p>
-            <p>27: 기타1(치과)</p>
-            <p>28: 기타4(한방)</p>
-            <p>31: 기타2</p>
-            <p>40: 기타2</p>
-            <p>41: 보건</p>
-            <p>42: 기타3</p>
-            <p>43: 보건기관치과</p>
-            <p>44: 보건기관한방</p>
-            <p>49: 치과</p>
-            <p>50: 구강악안면외과</p>
-            <p>51: 치과보철과</p>
-            <p>52: 치과교정과</p>
-            <p>53: 소아치과</p>
-            <p>54: 치주과</p>
-            <p>55: 치과보존과</p>
-            <p>56: 구강내과</p>
-            <p>57: 영상치의학과</p>
-            <p>58: 구강병리과</p>
-            <p>59: 예방치과</p>
-            <p>60: 치과소계</p>
-            <p>61: 통합치의학과</p>
-            <p>80: 한방내과</p>
-            <p>81: 한방부인과</p>
-            <p>82: 한방소아과</p>
-            <p>83: 한방안·이비인후·피부과</p>
-            <p>84: 한방신경정신과</p>
-            <p>85: 침구과</p>
-            <p>86: 한방재활의학과</p>
-            <p>87: 사상체질과</p>
-            <p>88: 한방응급</p>
-            <p>89: 한방응급</p>
-            <p>90: 한방소계</p>`;
-        });
     </script>
 </body>
 </html>
