--- a/static/disease/detail.html
+++ b/static/disease/detail.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>예방접종 대상 감염병 상세 정보 조회</h1>
-    <p><b>해당 검색 탭에 "접종 코드"를 검색하면 감염병 명, 감염병 설명이 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "접종코드"를 검색하면 감염병 명, 감염병 설명이 출력됩니다.</b><div class="ex"></div>
         검색 예시: 01</p>
     <form id="Detail">
         <input type="text" id="vcnCd" name="vcnCd" placeholder="접종 코드를 입력하세요.">
