--- a/static/disease/diseaseinfo.html
+++ b/static/disease/diseaseinfo.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     <h1>질병 예측 정보 조회</h1>
-    <p><b>해당 검색 탭에 "질병 코드"를 입력하면 시/도별 예측 일자, 질병예측진료건수, 질병예측위험도, 질병위험도 지침이 출력됩니다.</b></p>
-    <p><b>[질병코드] 1: 감기, 2: 눈병, 3: 식중독, 4: 천식, 5: 피부염, 15: 심뇌혈관 질환</b></p>
-    <p>[질병위험도 등급코드] 1: 관심, 2: 주의, 3: 경고, 4: 위험</p>
+    <p><b>검색 탭에 "질병 코드"를 입력하면 시/도별 예측 일자, 질병예측진료건수, 질병예측위험도, 질병위험도 지침이 출력됩니다.</b></p>
+    <hr>
+    <p><mark><b>질병코드</b> 1: 감기, 2: 눈병, 3: 식중독, 4: 천식, 5: 피부염, 15: 심뇌혈관 질환</mark></p>
+    <p><b>질병위험도 등급코드</b> 1: 관심, 2: 주의, 3: 경고, 4: 위험</p>
     <form id="Disease">
         <input type="text" id="dissCd" name="dissCd" placeholder="질병코드를 입력하세요.">
         <button type="button" onclick="fetchDiseaseInfo()">정보 조회</button>
