--- a/static/drugstore/pharmacyinfo.html
+++ b/static/drugstore/pharmacyinfo.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>우리 동네 약국 찾기</title>
-    <style>
-        .details {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <h1>우리 동네 약국 찾기</h1>
-    <p><b>해당 검색 탭에 "시/도 + 시/군/구"을 검색하면 기관명, 주소, 필독사항, 대표전화, 진료시간, 기관ID가 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "시/도 + 시/군/구"을 검색하면 기관명, 주소, 필독사항, 대표전화, 진료시간, 기관ID가 출력됩니다.</b><div class="ex"></div>
         검색 예시: 서울특별시 노원구</p>
     <form id="PharmacyInfo">
         <input type="text" id="Q0" name="Q0" placeholder="시도를 입력하세요">
