--- a/static/emergency/emergency.html
+++ b/static/emergency/emergency.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>응급 의료 정보 검색</h1>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('emergencyinfo.html')">응급 의료 기관 찾기</button><br><br>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('traumacenter.html')">외상센터 찾기</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('emergencyinfo.html')">응급 의료 기관 찾기</button>&nbsp;
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('traumacenter.html')">외상센터 찾기</button>&nbsp;
 </body>
 </html> 
