--- a/static/emergency/traumacenter.html
+++ b/static/emergency/traumacenter.html
@@ -36,7 +36,7 @@
                 data.forEach(item => {
                     resultHtml += `
                         <div style="margin-bottom: 20px;">
-                            <p><strong>기관명:</strong> ${item.dutyName}</p>
+                            <p><strong>기관명: ${item.dutyName}</strong></p>
                             <p><strong>기관 ID:</strong> ${item.hpid}</p>
                             <p><strong>주소:</strong> ${item.dutyAddr}</p>
                             <p><strong>대표전화:</strong> ${item.dutyTel1}</p>
