--- a/static/hospital/childnight.html
+++ b/static/hospital/childnight.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>동네 소아 야간 진료 병원 찾기</h1>
-    <p><b>해당 검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 종별코드명, 주소, 전화번호, 사이트 주소, 설립일이 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 종별코드명, 주소, 전화번호, 사이트 주소, 설립일이 출력됩니다.</b><div class="ex"></div>
         검색 예시: 상계동</p>
     <form id="ChildNight">
         <input type="text" id="emdongNm" name="emdongNm" placeholder="읍/면/동을 입력하세요.">
