--- a/static/hospital/holiday.html
+++ b/static/hospital/holiday.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>명절 비상 진료 기관 찾기</h1>
-    <p><b>해당 검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 병원 분류명, 주소, 전화번호, 기관ID가 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 병원 분류명, 주소, 전화번호, 기관ID가 출력됩니다.</b><div class="ex"></div>
         검색 예시: 서울특별시 강남구</p>
     <form id="Holiday">
         <input type="text" id="Q0" name="Q0" placeholder="시/도를 입력하세요.">
