--- a/static/hospital/hospital.html
+++ b/static/hospital/hospital.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>통합 병원 정보 검색</h1>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('hospitalinfo.html')">동네 병원 찾기</button><br><br>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('nursing.html')">동네 요양 병원 찾기</button><br><br>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('childnight.html')">동네 소아 야간 진료 병원 찾기</button><br><br>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('medicalcode.html')">진료 과목별 병원 찾기</button><br><br>
-    <button style="width: 200pt; height: 40pt;" onclick="window.open('holiday.html')">명절 비상 진료 병원 찾기</button><br><br>
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('hospitalinfo.html')">동네 병원 찾기</button>&nbsp;
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('nursing.html')">동네 요양 병원 찾기</button>&nbsp;
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('childnight.html')">동네 소아 야간 진료 병원 찾기</button>&nbsp;
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('medicalcode.html')">진료 과목별 병원 찾기</button>&nbsp;
+    <button style="width: 200pt; height: 40pt;" onclick="window.open('holiday.html')">명절 비상 진료 병원 찾기</button>&nbsp;
 </body>
 </html> 
