--- a/static/hospital/nursing.html
+++ b/static/hospital/nursing.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>동네 요양 병원 정보 조회</h1>
-    <p><b>해당 검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 종별코드명, 주소, 전화번호, 설립일이 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "시/군/구 또는 읍/면/동"을 검색하면 병원명, 종별코드명, 주소, 전화번호, 설립일이 출력됩니다.</b><div class="ex"></div>
         검색 예시: 노원구</p>
     <form id="Nursing">
         <input type="text" id="emdongNm" name="emdongNm" placeholder="시/구 또는 읍/면/동을 입력하세요.">
