--- a/static/disease/vaccination.html
+++ b/static/disease/vaccination.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>예방접종 대상 감염병 기준 목록 조회</title>
+    <title>예방접종 대상 감염병 정보 조회</title>
 </head>
 <body>
-    <h1>예방접종 대상 감염병 기준 목록 조회</h1>
+    <h1>예방접종 대상 감염병 정보 조회</h1>
     <form id="Vaccination">
         <button style="width: 200pt; height: 40pt;" onclick="window.open('detail.html')">예방접종 대상 감염병 상세 정보 조회</button>
         <p>상세조회를 위해서는 먼저 접종 코드를 조회하세요 
