--- a/static/emergency/emergencyinfo.html
+++ b/static/emergency/emergencyinfo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>응급 의료 기관 찾기</h1>
-    <p><b>해당 검색 탭에 "시/군/구"를 검색하면 기관명, 기관ID, 주소, 대표전화, 응급실전화, 응급의료기관 분류명, 응급의료기관 분류가 출력됩니다.</b><div class="ex"></div>
+    <p><b>검색 탭에 "시/군/구"를 검색하면 기관명, 기관ID, 주소, 대표전화, 응급실전화, 응급의료기관 분류명, 응급의료기관 분류가 출력됩니다.</b><div class="ex"></div>
         검색 예시: 서울특별시 종로구</p>
     <form id="EmergencyInfo">
         <input type="text" id="Q0" name="Q0" placeholder="시/도를 입력하세요.">
@@ -36,7 +36,7 @@
                 data.forEach(item => {
                     resultHtml += `
                         <div style="margin-bottom: 20px;">
-                            <p><strong>기관명:</strong> ${item.dutyName}</p>
+                            <p><strong>기관명: ${item.dutyName}</strong></p>
                             <p><strong>기관 ID:</strong> ${item.hpid}</p>
                             <p><strong>주소:</strong> ${item.dutyAddr}</p>
                             <p><strong>대표전화:</strong> ${item.dutyTel1}</p>
